--- a/create-account.html
+++ b/create-account.html
@@ -2,13 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Account Created</title>
 </head>
 <body>
     <h1>Account created!</h1>
     <div id="account"></div>
-    <a href="https://tjdrz.github.io/html-forms/">Back to Form</a>
+    <a href="/">Back to Form</a>
     <script>
         const account = document.querySelector("#account");
         new URLSearchParams(window.location.search).forEach((value, name) => {
